--- a/.github/workflows/test1.yml
+++ b/.github/workflows/test1.yml
@@ -38,6 +38,10 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.8 #install the python needed
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install requests       
       - name: run python script
         run: |
           python main.py
