--- a/.github/workflows/test2.yml
+++ b/.github/workflows/test2.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI2
+name: CI3
 
 # Controls when the workflow will run
 on:
@@ -24,24 +24,11 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: Download embeddable python
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
-      - name: setup python
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.8 #install the python needed
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install requests       
-      - name: run python script
-        run: |
-          python main.py
+          Invoke-WebRequest https://www.python.org/ftp/python/3.8.9/python-3.8.9-embed-amd64.zip -OutFile .\python-3.8.9-embed-amd64.zip
+          ls .
+          
+          
+          
+          
