--- a/.github/workflows/test2.yml
+++ b/.github/workflows/test2.yml
@@ -26,9 +26,11 @@ jobs:
       - uses: actions/checkout@v2
       - name: Download embeddable python
         run: |
-          Invoke-WebRequest https://www.python.org/ftp/python/3.8.9/python-3.8.9-embed-amd64.zip -OutFile .\python-3.8.9-embed-amd64.zip
+          Invoke-WebRequest https://www.python.org/ftp/python/3.8.9/python-3.8.9-embed-amd64.zip -OutFile .\python.zip
+          Invoke-WebRequest https://bootstrap.pypa.io/get-pip.py -OutFile .\get-pip.py
           ls .
-          
+          Expand-Archive -Path .\python.zip -DestinationPath .\python
+          ls .\python
           
           
           
