--- a/.github/workflows/test2.yml
+++ b/.github/workflows/test2.yml
@@ -24,7 +24,7 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-      - name: Download embeddable python and get-pip.py
+      - name: Download embeddable python zip and get-pip.py
         run: |
           Invoke-WebRequest https://www.python.org/ftp/python/3.8.9/python-3.8.9-embed-amd64.zip -OutFile .\python.zip
           Invoke-WebRequest https://bootstrap.pypa.io/get-pip.py -OutFile .\get-pip.py
@@ -32,12 +32,18 @@ jobs:
       - name: Extract embeddable python
         run: |
           Expand-Archive -Path .\python.zip -DestinationPath .\python
-          ls .\python
+          ls .\python\
       - name: Execute get-pip.py
         run: |
           .\python\python.exe .\get-pip.py
-          ls .\python
-          
+          ls .\python\
+      - name: Test pip
+        run: |
+          .\python\python.exe -m pip install requests
+          ls .\python\Lib\
+          .\python.exe -c "import requests; print(requests.__version__)"
+          .\python\python.exe -m pip uninstall -y requests
+
           
           
           
