--- a/.github/workflows/test2.yml
+++ b/.github/workflows/test2.yml
@@ -44,7 +44,7 @@ jobs:
         run: |
           .\python\python.exe -m pip install requests
           ls .\python\Lib\site-packages\
-          .\python\python.exe -c "import requests; print(requests.__version__)"
+          .\python\python.exe -c "import requests; print(requests.get('https://github.com').text[:300])"
           .\python\python.exe -m pip uninstall -y requests
 
           
