--- a/.github/workflows/test2.yml
+++ b/.github/workflows/test2.yml
@@ -1,14 +1,11 @@
-# This is a basic workflow to help you get started with Actions
-
 name: CI3
 
-# Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
-#   push:
-#     branches: [ main ]
-#   pull_request:
-#     branches: [ main ]
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -51,6 +48,7 @@ jobs:
           Compress-Archive -Path .\python -DestinationPath .\EmbeddablePythonWithPip.zip
       - name: Release
         uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
         with:
           files: |
             .\EmbeddablePythonWithPip.zip
