--- a/.github/workflows/test2.yml
+++ b/.github/workflows/test2.yml
@@ -3,7 +3,7 @@ name: CI3
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ main ]
+    #branches: [ main ]
     tags:
       - 'v*'
   pull_request:
@@ -48,11 +48,15 @@ jobs:
       - name: Create zip file
         run: |
           Compress-Archive -Path .\python -DestinationPath .\EmbeddablePythonWithPip.zip
+#       - name: Release
+#         uses: softprops/action-gh-release@v1
+#         if: startsWith(github.ref, 'refs/tags/v')
+#         with:
+#           files: |
+#             .\EmbeddablePythonWithPip.zip
       - name: Release
-        uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/v')
+        uses: ncipollo/release-action@v1
         with:
-          files: |
-            .\EmbeddablePythonWithPip.zip
-          
-          
+          artifacts: ".\\EmbeddablePythonWithPip.zip"
+#           bodyFile: "body.md"
+          token: ${{ secrets.GITHUB_TOKEN }}
