--- a/.github/workflows/test2.yml
+++ b/.github/workflows/test2.yml
@@ -47,7 +47,7 @@ jobs:
           .\python\python.exe -m pip uninstall -y requests
       - name: Create zip file
         run: |
-          Compress-Archive -Path .\python -DestinationPath .\EmbeddablePythonWithPip.zip
+          Compress-Archive -Path .\python\* -DestinationPath .\EmbeddablePythonWithPip.zip
 #       - name: Release
 #         uses: softprops/action-gh-release@v1
 #         if: startsWith(github.ref, 'refs/tags/v')
